# doclink-checker

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: index.md
src/: checker.rs  main.rs
test_data/: index.md
test_data/subdir/: index.mdx
