[package]
name = "doclink-checker"
version = "0.1.0"
authors = ["Lewis Boon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
colored = "2.0.0"
clap = "2.33.3"