[package]
name = "doclink-checker"
version = "1.1.0"
authors = ["Lewis Boon"]
edition = "2018"
description = "Check documentation, like Markdown, for broken links"
repository = "https://github.com/labooner/doclink-checker"
categories = ["command-line-interface"]
readme = "README.md"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
colored = "2.0.0"
clap = "2.34.0"